# XiaoMing

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
docs/: web-search-tool.md
docs/superpowers/specs/: 2026-04-30-xiaoming-agent-mvp-design.md  2026-06-05-dream-memory-forgetting-design.md
evals/: README.md
src/xiaoming/: agent_errors.py  agent_loop.py  bootstrap.py  cli.py  config.py  hook_config.py  hooks.py  logging.py  progress.py  session.py  skill_installer.py  skills.py  subprocess_utils.py  time_meta.py  turn_state.py  worker_diagnostics.py  worker_main.py
tests/: test_agent_loop.py  test_apply_patch_and_registry.py  test_async_agents.py  test_async_coordinator.py  test_async_mailbox.py  test_async_responder.py  test_async_runtime.py  test_async_scheduler.py  test_async_task_store.py  test_bootstrap.py  test_checkpoints.py  test_cli_async.py  test_cli_smoke.py  test_config.py  test_context_management.py  test_context_windows.py  test_deepseek_provider.py  test_deepseek_smoke.py  test_deepseek_superpowers_integration.py  test_dream_runner.py  test_dream_tools.py  test_eval_runner.py  test_external_sessions.py  test_fetch_skill.py  test_file_tools.py  test_file_write_tools.py  test_hook_config.py  test_llm_errors.py  test_logging.py  test_memory_fragments.py  test_memory_models.py  test_memory_packetizer.py  test_memory_store.py  test_memory_view.py  test_model_facing_prompt_labels.py  test_openai_provider_extraction.py  test_openai_smoke.py  test_openai_tools.py  test_paths_and_formatting.py  test_permission_store.py  (+15 more)
(+101 files in other folders)
